Fix font sizze and spacing

--- a/src/Results/Results.css
+++ b/src/Results/Results.css
@@ -25,6 +25,5 @@
 .item__title {
   margin-top: 1em;
   color: black;
-  font-size: 0.8rem;
   font-weight: 600;
 }
